<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="action_bar_backup">Backup</string>
    <string name="action_bar_backup_completed">Backup completed</string>
    <string name="action_bar_change_master_password">Change master password</string>
    <string name="action_bar_change_password_ok">Change the password!</string>
    <string name="action_bar_generate_password">Generate password</string>
    <string name="action_bar_help">Help</string>
    <string name="action_bar_import_export"><![CDATA[Export&Import ▶]]></string>
    <string name="action_bar_import_google_passwordmanager">Import GooglePassword manager</string>
    <string name="action_bar_lock">Lock app</string>
    <string name="action_bar_old_password">Enter current password</string>
    <string name="action_bar_password_change_failed">Failed changing password!</string>
    <string name="action_bar_password_changed">Master password changed!</string>
    <string name="action_bar_restore">Restore</string>
    <string name="action_bar_search">Search</string>
    <string name="action_bar_settings">Settings</string>
    <string name="application_name">Password Safe</string>
    <string name="biometrics_authenticate_subtitle">Please authenticate yourself, or click cancel and enter the password. If you cancel, biometrics will be forgotten. You can easily re-enroll.</string>
    <string name="biometrics_authenticate_title">Authentication required</string>
    <string name="biometrics_authentication_error">ERROR: onAuthenticationError: %1$d %2$s</string>
    <string name="biometrics_authentication_failed">ERROR: onAuthenticationFailed</string>
    <string name="biometrics_cancel">Cancel</string>
    <string name="biometrics_prompt_title">PasswordSafe Biometric</string>
    <string name="biometrics_register">Register biometrics after successful login</string>
    <string name="biometrics_register_subtitle">In order to bypass the password, biometrics need to be recorded. You can always cancel and fall back to password option. You can also turn off biometrics from settings later. You may be required to re-enroll biometrics periodically.</string>
    <string name="biometrics_register_title">Registering new biometrics</string>
    <string name="category_list_delete">Delete %s?</string>
    <string name="category_list_delete_confirm">Are you sure you want to delete %s?</string>
    <string name="category_list_edit">Edit category %s</string>
    <string name="category_list_edit_category">Edit category name</string>
    <string name="generic_add">Add</string>
    <string name="generic_dont_delete">Don\'t delete!</string>
    <string name="generic_ok">OK!</string>
    <string name="generic_yes_delete">Do delete!</string>
    <string name="dropdown_description">Dropdown</string>
    <string name="remove_description">Remove</string>
    <string name="login_button">Login</string>
    <string name="login_button_clear_db">Login/Clear database</string>
    <string name="login_invalid_password">Invalid password</string>
    <string name="login_password_tip">Enter your password</string>
    <string name="login_screen_restore_mark_message">"Looks like Google Automatic backup restored our data around %1$s"</string>
    <string name="login_tip">Open with your password - or optionally with biometrics if you registered</string>
    <string name="login_verify_password_tip">Enter the same password again</string>
    <string name="login_with_biometrics">Login with biometrics</string>
    <string name="notification_lock_description">Notification when password Safe is unlocked</string>
    <string name="notification_lock_logged_in">Logged in</string>
    <string name="notification_lock_title">Automatic locking</string>
    <string name="move_password_cancel">Don\'t move</string>
    <string name="move_password_confirm">Move!</string>
    <string name="move_password_select_category">Select category to move to</string>
    <string name="move_password_title">Move password to %1$s</string>
    <string name="password_entry_breach_check">Breach check</string>
    <string name="password_entry_breached">This password has been breached</string>
    <string name="password_entry_capture_photo">Take a photo</string>
    <string name="password_entry_changed_date">Password last changed:</string>
    <string name="password_entry_delete_photo">Delete photo</string>
    <string name="password_entry_description_required">Description cannot be empty. You have to specify it (or discard changes).</string>
    <string name="password_entry_description_tip">Enter description of the entry</string>
    <string name="password_entry_discard">Discard</string>
    <string name="password_entry_highlight_hint">Special coloring for numbers </string>
    <string name="password_entry_highlight_hint_l"> lower case </string>
    <string name="password_entry_highlight_space">space</string>
    <string name="password_entry_not_breached">This password has NOT been breached</string>
    <string name="password_entry_note_tip">Notes about the entry</string>
    <string name="password_entry_password_label">Copy</string>
    <string name="password_entry_password_tip">Enter password</string>
    <string name="password_entry_save">Save?</string>
    <string name="password_entry_unsaved_changes_info">You have unsaved changes.\nWould you like to save or discard them?</string>
    <string name="password_entry_username_label">Copy</string>
    <string name="password_entry_username_tip">Enter username</string>
    <string name="password_entry_visit">Visit</string>
    <string name="password_entry_website_tip">Enter website, like https://…</string>
    <string name="password_list_delete">Are you sure to delete the password %s?</string>
    <string name="password_list_delete_password">Delete password %s</string>
    <string name="password_list_move_password">Move password %s</string>
    <plurals name="password_list_password_age_days">
        <item quantity="zero">(brand new)</item>
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="password_list_password_age_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="password_list_password_age_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="category_passwords_count">
        <item quantity="one">%d password</item>
        <item quantity="other">%d passwords</item>
    </plurals>
    <string name="shortcut_backup_short">Backup</string>
    <string name="shortcut_backup_long">Make a backup</string>
    <string name="shortcut_backup_disabled">Cannot backup</string>
    <string name="shortcut_search_short">Search</string>
    <string name="shortcut_search_long">Search for a password</string>
    <string name="shortcut_search_disabled">Cannot search</string>
    <string name="title_activity_category_screen">Categories</string>
    <string name="title_activity_help_screen">HelpScreen</string>
    <string name="title_activity_password_entry_screen">PasswordEntryScreen</string>
    <string name="title_activity_password_screen">PasswordScreen</string>
    <string name="title_activity_password_search_screen">Password search</string>
    <string name="title_activity_restore_screen">Restore passwords</string>
    <string name="restore_screen_backup_help">You need the password of the backup in order to restore it.\nBackup file %s</string>
    <string name="restore_screen_backups_password">Enter backup\'s password</string>
    <string name="restore_screen_begin_restore">Begin restoration, please wait</string>
    <string name="restore_screen_restore_failed">Restoration failed</string>
    <string name="restore_screen_restored">Restoration complete: %1$d</string>
    <string name="restore_screen_not_most_recent_backup">Not most recent backup file</string>
    <string name="restore_screen_not_most_recent_backup_age">Backup is %1$d days older than most recent (backup %2$s vs latest %3$s)</string>
    <string name="restore_screen_not_most_recent_backup_restore">Restore anyway!</string>
    <string name="restore_screen_not_most_recent_backup_cancel">Cancel!</string>
    <string name="restore_screen_process_backup">Processing backup...</string>
    <string name="restore_screen_finished_backup">Finished processing backup</string>
    <string name="restore_screen_restoring_old_backup">Restoring older backup...</string>
    <string name="restore_screen_reread_database">Re-reading database...</string>
    <string name="restore_screen_done">Done!</string>
    <string name="restore_screen_passwords_count">Passwords %1$d</string>
    <string name="restore_screen_categories_count">Categories %1$d</string>
    <string name="restore_screen_restore_button">Restore</string>
    <string name="password_search_notes">+Notes</string>
    <string name="password_search_passwords">+Passwords</string>
    <string name="password_search_search_hint">Find from descriptions</string>
    <string name="password_search_usernames">+Usernames</string>
    <string name="password_search_websites">+Websites</string>
    <plurals name="preference_locktime">
        <item quantity="one">%d minute</item>
        <item quantity="two">%d minutes</item>
        <item quantity="many">%d minutes</item>
        <item quantity="few">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="preferences_automatic_locking_selection_title">Choose automatic locking timeout</string>
    <string name="preferences_clipboard_clear_delay_title">Clipboard clearing timeout</string>
    <string name="preferences_experimental_features_title">Available Experimental Features</string>
    <string name="preferences_summary_automatic_locking_timeout">After chosen amount of minutes, password safe will lock and require logging in again</string>
    <string name="preferences_summary_clipboard_clear_delay">Delay in seconds after which clipboard is cleared</string>
    <string name="preferences_summary_default_user_name">Default username when adding a new password. Completely optional, typically your email address.</string>
    <string name="preferences_summary_enable_biometrics">Instead of password you can login with biometrics. Password fallback always available. Android will take care of actual biometric authenticatin. Password safe only receives information whether it succeeded or not. Even when enabled you may have to occasionally re-enroll for added security.</string>
    <string name="preferences_summary_experimental_features">Some new feature may be tested by enabling them. There might be problems until they mature.</string>
    <string name="preferences_summary_lastback_never_done">No backups yet</string>
    <string name="preferences_summary_lock_when_screen_locks">When android screen lock turns on, password safe will automatically lock</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_title_automatic_locking_timeout">Automatic locking timeout</string>
    <string name="preferences_title_clipboard_clear_delay">Clipboard clearing delay</string>
    <string name="preferences_title_default_backup_path">Default backup path</string>
    <string name="preferences_title_default_user_name">Default username</string>
    <string name="preferences_title_enable_biometrics">Enable biometric identification</string>
    <string name="preferences_title_experimental_features">Experimental Features</string>
    <string name="preferences_title_lock_when_screen_locks">Lock when screen locks</string>
    <string name="preferences_title_time_of_last_backup">Time of last backup</string>
    <string name="title_categorypager">Paged Category View</string>
    <string name="title_hibp">HIBP support</string>
</resources>